# demo-crypto

./: Cargo.toml  README.md  justfile
api/: Cargo.toml
api/src/: lib.rs
certs/: cert.pem  key.pem
client/: Cargo.toml
client/src/: app.rs  client.rs  error.rs  keygen.rs  lib.rs  util.rs
server/: Cargo.toml
server/src/: app.rs  error.rs  main.rs
static/: index.html
