[workspace]
members = ["server", "client", "api"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

[profile.dev]
debug = true

[profile.release]
debug = false
lto = true
