[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
api = { path = "../api" }
console_error_panic_hook = { version = "0.1", optional = true }
anyhow = { workspace = true }
multibase = "0.9"
gloo-events = "0.2"
gloo-net = { version = "0.4", features = ["http"] }
js-sys = "0.3"
p256 = { version = "0.13", default-features = false, features = [
    "alloc",
    "arithmetic",
    "std",
    "pkcs8",
] }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
serde = { workspace = true }
serde-wasm-bindgen = "0.4"
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-wasm = "0.2"
uuid = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "CredentialsContainer",
    "HtmlInputElement",
    "Navigator",
    "PublicKeyCredentialRequestOptions",
] }
webauthn-rs-proto = { version = "0.5", features = ["wasm"] }

[features]
default = ["console_error_panic_hook"]
