[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
api = { path = "../api" }
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower-sessions = { version = "0.14", features = ["signed"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = "2.5"
uuid = { workspace = true }
webauthn-rs = { version = "0.5", features = [
    "danger-allow-state-serialisation",
] }
